# homebrew-ai

./: README.md  ai-cli.rb  pyproject.toml
src/ai_cli/: main.py
