[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "A sample AI CLI tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your python dependencies here, e.g.:
    # "requests",
    # "numpy",
    "groq",
]

[project.scripts]
ai-cli = "ai_cli.main:cli"

[project.urls]
Homepage = "https://github.com/Anay_Rustogi/AI_CLI"
Issues = "https://github.com/Anay_Rustogi/AI_CLI/issues"
