[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.1" # The version number must match the formula's version.
description = "A sample AI CLI tool."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # REQUIRED FIX: This dependency ensures the 'groq' module is installed, 
    # resolving the 'ModuleNotFoundError'.
    "groq", 
]

[project.scripts]
ai-cli = "ai_cli.main:cli"

[project.urls]
# Corrected the repository name to align with the Homebrew formula
Homepage = "https://github.com/Codemaster-AR/homebrew-ai"
Issues = "https://github.com/Codemaster-AR/homebrew-ai/issues"
